@@ -23,8 +23,6 @@ along with pyscard; if not, write to the Free Software
 Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 """
 
-from __future__ import print_function
-
 try:
     import Pyro.core
     import Pyro.naming
